Fixed table thead th x align

--- a/src/css/components/table.css
+++ b/src/css/components/table.css
@@ -9,7 +9,7 @@
 	}
 
 	th {
-		@apply p-2 mb-4 whitespace-nowrap;
+		@apply py-2 px-4 mb-4 whitespace-nowrap;
 	}
 
 	th {
